--- a/src/main/java/view/SupplierFormComponent.form
+++ b/src/main/java/view/SupplierFormComponent.form
@@ -262,7 +262,7 @@
                                           <Component id="jTextFieldPhone2" min="-2" pref="278" max="-2" attributes="0"/>
                                       </Group>
                                       <Component id="jTextFieldEmail" alignment="1" max="32767" attributes="0"/>
-                                      <Component id="jTextFieldName1" max="32767" attributes="0"/>
+                                      <Component id="jTextFieldName" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
@@ -271,7 +271,7 @@
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="jLabelName1" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="jLabelSocialReason" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Component id="jLabelCpf" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Component id="jLabelIE" alignment="0" min="-2" max="-2" attributes="0"/>
                                   </Group>
@@ -295,7 +295,7 @@
                                           <EmptySpace type="separate" max="-2" attributes="0"/>
                                           <Component id="jTextFieldCnpj" max="32767" attributes="0"/>
                                       </Group>
-                                      <Component id="jTextFieldName" max="32767" attributes="0"/>
+                                      <Component id="jTextFieldSocialReason" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -358,12 +358,12 @@
                   <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabelName" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jTextFieldName1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jTextFieldName" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jLabelName1" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jTextFieldName" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jLabelSocialReason" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jTextFieldSocialReason" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -477,7 +477,7 @@
             <Property name="text" type="java.lang.String" value="Observa&#xe7;&#xe3;o:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jTextFieldName">
+        <Component class="javax.swing.JTextField" name="jTextFieldSocialReason">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="32" green="32" red="32" type="rgb"/>
@@ -815,7 +815,7 @@
             </Component>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JLabel" name="jLabelName1">
+        <Component class="javax.swing.JLabel" name="jLabelSocialReason">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Arial" size="14" style="1"/>
@@ -826,7 +826,7 @@
             <Property name="text" type="java.lang.String" value="Raz&#xe3;o Social:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jTextFieldName1">
+        <Component class="javax.swing.JTextField" name="jTextFieldName">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="32" green="32" red="32" type="rgb"/>
